--- a/config/database.yml
+++ b/config/database.yml
@@ -9,13 +9,17 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
+<%
+  mysql = URI(ENV['MYSQL_URL'] || 'mysql://root@127.0.0.1:3306/ticketing_development')
+%>
+
 default: &default
   adapter: mysql2
-  encoding: utf8
-  pool: 5
-  username: root
-  password: ''
-  host: localhost
+  username: <%= mysql.user %>
+  host: <%= mysql.host %>
+  port: <%= mysql.port %>
+  password: <%= mysql.password %>
+  reconnect: true
 
 development:
   <<: *default
