--- a/test/fixtures/tickets.yml
+++ b/test/fixtures/tickets.yml
@@ -4,8 +4,17 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  subject: subject
+  description: one
+  status_id: 1
+
+two:
+  subject: subject
+  description: two
+  status_id: 2
+
+three:
+  subject: subject
+  description: two
+  status_id: 3
